...
}

export const defaultPlayArea: DefaultPlayArea = {
    bbox: tokyoMetadata.bbox,
    boundary: tokyoBoundary,
    center: tokyoMetadata.center,
    label: "Tokyo 23 Wards",
    maskHoles: tokyoMetadata.maskHoles,
    osmId: 19631009,
    osmType: "R",
};

export const knownPlayAreaPresets: PlayArea[] = [defaultPlayArea];
...
